--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 /*header start*/
 header {
-
+background-image:;
 }
 .logo {
   height: 50px;
@@ -23,6 +23,3 @@ nav {
   height: 50px;
 }
 /*header end*/
-.background{
-    position:;
-}
