--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h3 {
 /*header start*/
 
 header {
-  background-image: url(/img/bg.png);
+  background-image: url(./img/bg.png);
   height: 910px;
 }
 .logo {
@@ -313,7 +313,7 @@ button:hover {
 /*price end
 contacts start*/
 .contacts {
-  background-image: url(/img/contacts.jpg);
+  background-image: url(./img/contacts.jpg);
   height: 700px;
   display: flex;
   justify-content: flex-end;
